2020-03-30  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr_redis.c: fix dlr_redis_update() to get correct DLR entry updates,
      i.e. for intermediate events.

2020-01-06 Alexander Malysh <amalysh @ kannel.org>
    * gw/smsc/smsc_smpp.c, doc/userguide.xml, gwlib/cfg.def: added new config
      option to retry even if SMSC rejects login due to wrong username & password.

2020-01-06 Alexander Malysh <amalysh @ kannel.org>
    * doc/userguide/userguide.xml, gw/urltrans.c: added %U escape code for
      hexcoded UDH.

2019-12-10  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: fixed last commit, wrong XML struct.
    Thanks to Alexander Malysh for pointing to this.
    
2019-12-07  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/http/generic.c: allow using the 'alt-charset' usage in the MT
      direction too, to transcode the payload before URL-encoding and 
      setting the corresponding charset="" value in the content-type header
      for HTTP POST methods.
      
2019-12-04  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document 'use-post' for generic type
      of HTTP SMSC.
    * gw/smsc_http_p.h: add use_post flag.
    * gw/smsc_http.c: use 'use-post' boolean config from 'group = smsc'.
    * gw/smsc/http/generic.c: implement HTTP POST method support for the
      sending and receiving side of the 'system-type = generic'.
    * gwlib/cfg.def: add 'use-post' config directive to 'group = smsc'.
    * gwlib/http.[ch]: export function parse_cgivars() publically.
    This patchset adds support for the HTTP POST method for the SMSC HTTP
    type 'generic'. Handling long Unicode messages can easily exceed the
    max length limits of HTTP GET URLs on various HTTP servers and HTTP
    proxy components, causing HTTP/502 and other defects in processing.
    Now we can use content-type 'application/x-www-form-urlencoded' data
    in the HTTP POST body to overcome those limitations if necessary.
    