@@ -204,7 +204,8 @@ enum {
 	HTTP_METHOD_POST = 2,
 	HTTP_METHOD_HEAD = 3,
 	HTTP_METHOD_PUT  = 4,
-    HTTP_METHOD_DELETE = 5
+	HTTP_METHOD_DELETE = 5,
+    HTTP_METHOD_PATCH  = 6,
 };
 
 /*
